--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,10 @@ input {
     display: block;
 }
 
+textarea {
+    margin-bottom: 15px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    display: block;
+    
+}
